--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snew-classic-ui",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "An Open-Source React fork of the Classic Reddit User Experience",
   "main": "build/index.js",
   "directories": {
@@ -12,7 +12,8 @@
     "build": "npm run build-css && babel lib -d build",
     "lint": "eslint lib/**; exit 0",
     "lint:watch": "esw -w lib/**",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "postinstall": " npm run build"
   },
   "repository": {
     "type": "git",
@@ -28,21 +29,23 @@
     "url": "https://github.com/decred/snew-classic-ui/issues"
   },
   "homepage": "https://github.com/decred/snew-classic-ui#readme",
-  "devDependencies": {
+  "buildDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "node-less": "^1.0.0",
+    "node-less-chokidar": "^0.1.2",
+    "polished": "^1.8.1"
+  },
+  "devDependencies": {
     "eslint": "^4.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "eslint-watch": "^3.1.3",
-    "node-less": "^1.0.0",
-    "node-less-chokidar": "^0.1.2",
-    "polished": "^1.8.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
