--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snew-classic-ui",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "An Open-Source React fork of the Classic Reddit User Experience",
   "main": "build/index.js",
   "directories": {
@@ -29,7 +29,7 @@
     "url": "https://github.com/decred/snew-classic-ui/issues"
   },
   "homepage": "https://github.com/decred/snew-classic-ui#readme",
-  "buildDependencies": {
+  "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
