--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "node-less": "^1.0.0",
-    "node-less-chokidar": "^0.3.1"
+    "node-less-chokidar": "^0.3.1",
+    "timeago-react": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "5.7.0",
